fixed scrollbar layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   padding: 0;
